d: Fix missing dependencies in depfile for imported files (PR93038)

A new field for tracking imported files was added to the front-end, this
makes use of it by writing all such files in the make dependency list.

gcc/d/ChangeLog:

2020-03-22  Iain Buclaw  <ibuclaw@gdcproject.org>

	PR d/93038
	* d-lang.cc (deps_write): Add content imported files to the make
	dependency list.

gcc/testsuite/ChangeLog:

2020-03-22  Iain Buclaw  <ibuclaw@gdcproject.org>

	PR d/93038
	* gdc.dg/fileimports/pr93038.txt: New test.
	* gdc.dg/pr93038.d: New test.